# MigrationSafe

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
demo/: README.md  __init__.py  run_demo.py
demo/migrations/: 0004_add_generic_records.py  0005_add_generic_flags.py  0006_add_generic_flag.py
docs/: DJANGO_MIGRATIONS.md  EXECUTING_MIGRATIONS.md  GIT_HISTORY.md  PLUGINS.md  PUBLISHING.md
docs/rules/: MIG001.md  MIG002.md  MIG003.md  MIG004.md  MIG005.md  MIG006.md  MIG007.md  MIG008.md  MIG009.md  MIG010.md  MIG011.md  MIG012.md  MIG013.md  MIG014.md  MIG015.md  MIG016.md  MIG017.md  MIG018.md  MIG019.md  MIG020.md  MIG021.md  MIG022.md  MIG023.md  MIG024.md  MIG025.md  MIG026.md
examples/ci/: Jenkinsfile  Makefile  README.md  circleci-config.yml  github-actions.yml  gitlab-ci.yml  pre-commit-config.yaml
examples/django/: README.md  analysis_example.py  sample_migration.py
examples/git_history/: README.md  basic_analysis.py  trend_analysis.py
examples/plugins/: README.md  __init__.py  custom_plugin.py
examples/snapshot_executor/: README.md  advanced_usage.py  basic_usage.py
migsafe/: __init__.py  analyzer.py  ast_utils.py  base.py  cli.py  config.py  models.py
migsafe/analyzers/: __init__.py  alembic_analyzer.py  base_sql_analyzer.py  django_analyzer.py  django_converter.py  sql_analyzer.py  sql_cte_analyzer.py  sql_join_analyzer.py  sql_patterns.py  sql_subquery_analyzer.py  sql_utils.py
migsafe/autofix/: __init__.py  add_column_not_null_fix.py  ast_utils.py  autofix_engine.py  base.py  base_finder.py  create_index_fix.py  drop_index_fix.py
migsafe/executors/: __init__.py  lock_detector.py  migration_runner.py  performance_metrics.py  snapshot_executor.py
migsafe/formatters/: __init__.py  base.py  colors.py  html_formatter.py  json_formatter.py  junit_formatter.py  sarif_formatter.py  stats_csv_formatter.py  stats_json_formatter.py  stats_text_formatter.py  text_formatter.py
migsafe/history/: __init__.py  commit_analyzer.py  git_analyzer.py  migration_history.py  trend_analyzer.py
migsafe/plugins/: __init__.py  base.py  base_loader.py  context.py  loader.py  manager.py  registry.py  types.py
migsafe/rules/: __init__.py  add_column_not_null_rule.py  alter_column_type_rule.py  base.py  batch_migration_rule.py  create_index_concurrently_rule.py  drop_column_rule.py  drop_index_concurrently_rule.py  execute_raw_sql_rule.py  rule_engine.py  sql_pattern_rule.py
migsafe/sources/: __init__.py  alembic_source.py  django_source.py  file_source.py
migsafe/stats/: __init__.py  mapping.py  migration_stats.py  recommendations.py
tests/: __init__.py  test_alembic_analyzer.py  test_alembic_source.py  test_analyzer.py  test_autofix.py  test_base_architecture.py  test_cli.py  test_django_analyzer.py  test_django_cli_integration.py  test_django_converter.py  test_django_integration.py  test_django_source.py  test_formatters.py  test_git_history.py  test_issue_model.py  test_plugin_base.py  test_plugin_integration.py  test_plugin_loader.py  test_plugin_manager.py  test_plugin_registry.py  test_rule_add_column_not_null.py  test_rule_alter_column_type.py  test_rule_base.py  test_rule_batch_migration.py  test_rule_create_index_concurrently.py  test_rule_drop_column.py  test_rule_drop_index_concurrently.py  test_rule_engine.py  test_rule_execute_raw_sql.py  test_rule_sql_pattern.py  test_snapshot_executor.py  test_sql_analyzer.py  test_sql_analyzer_edge_cases.py  test_sql_cte_analyzer.py  test_sql_join_analyzer.py  test_sql_subquery_analyzer.py  test_stats.py  test_stats_formatters.py
tests/integration/: README.md  __init__.py  conftest.py  test_cli_integration.py  test_compatibility.py  test_django_integration.py  test_git_history_integration.py  test_performance.py  test_plugins_integration.py  test_snapshot_executor_integration.py
tests/integration/fixtures/django_migrations/: 0001_test_migration.py  __init__.py
tests/integration/fixtures/migrations/: 001_test_migration.py  __init__.py
tests/integration/fixtures/plugins/: test_plugin.py
