[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "migsafe"
version = "0.4.1"
description = "Safe migrations for production PostgreSQL databases"
readme = "README.md"
requires-python = ">=3.9"

# SPDX-compliant license declaration (required by setuptools >=77)
license = "MIT"
license-files = ["LICENSE"]

authors = [
    { name = "Kirill Vladimirov" }
]

keywords = [
    "alembic",
    "migrations",
    "postgresql",
    "database",
    "sql",
    "django",
    "ci",
    "lint",
    "safety",
    "production",
    "ast",
    "analysis",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "GitPython>=3.1.0",
    "typing_extensions>=4.0.0; python_version<'3.10'",
]

[project.urls]
Homepage = "https://github.com/SuccubHunter/MigrationSafe"
Documentation = "https://github.com/SuccubHunter/MigrationSafe#readme"
Repository = "https://github.com/SuccubHunter/MigrationSafe"
"Bug Tracker" = "https://github.com/SuccubHunter/MigrationSafe/issues"
Changelog = "https://github.com/SuccubHunter/MigrationSafe/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

formatters = [
    "rich>=13.0",
]

executors = [
    "psycopg2-binary>=2.9.0",
    "alembic>=1.8.0",
    "sqlalchemy>=1.4.0",
]

[project.scripts]
migsafe = "migsafe.cli:main"

[tool.setuptools]
packages = [
    "migsafe",
    "migsafe.analyzers",
    "migsafe.formatters",
    "migsafe.rules",
    "migsafe.sources",
    "migsafe.autofix",
    "migsafe.executors",
    "migsafe.stats",
    "migsafe.history",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

# --------------------
# Ruff configuration
# --------------------

[tool.ruff]
line-length = 130
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting (isort replacement)
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/integration/fixtures/django_migrations/*.py" = ["N999"]

[tool.ruff.lint.isort]
known-first-party = ["migsafe"]

# --------------------
# Mypy configuration
# --------------------

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
exclude = [
    "^build/",
    "^dist/",
    "^migsafe\\.egg-info/",
]

[[tool.mypy.overrides]]
module = ["git.*", "click.*", "pydantic.*"]
ignore_missing_imports = true
